--- a/index.html
+++ b/index.html
@@ -247,6 +247,49 @@
             collecting valuable analytics that will aid in improving fan engagement.</p>
         </div>
       </div>
+      <div class="row">
+          <div style="margin-top: 2%" class="col-sm-4 wow fadeIn" data-wow-delay="0.8s">
+            <div class="text-center iphone wow fadeInUp" data-wow-delay="1.4s">
+              <img href="https://replicode.herokuapp.com/" src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/replicode.png">
+            </div>
+            <hr class="line purple">
+            <a href="https://replicode.herokuapp.com/" target="_blank">
+              <h3>RepliCode</h3>
+            </a>
+            <p>Today, there are many learning resources available for those wishing to teach themselves how to code. One of the
+              learning mediums that both beginners and experienced developers alike often seek out are video coding tutorials.
+              Video tutorials are great learning resources but they lack the level of interactiveness that learning developers
+              yearn for, so together with a team of developers I developed a solution called Replicode, a content creation
+              platform that allows developers to easily create interactive coding tutorials.</p>
+          </div>
+          <div style="margin-top: 2%" class="col-sm-4 wow fadeIn" data-wow-delay="1.2s">
+            <div class="text-center iphone wow fadeInUp" data-wow-delay="1.8s">
+              <img href="https://www.youtube.com/watch?v=R8uP2wKp4n0" src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/myDigiDiet.png">
+            </div>
+            <hr class="line purple">
+            <a href="https://www.youtube.com/watch?v=R8uP2wKp4n0" target="_blank">
+              <h3>MyDigiDiet</h3>
+            </a>
+            <p>MyDigiDiet is a desktop application that helps give users insight into their digital habits. The application was
+              created using Electron (a framework for creating native applications with web technologies like JavaScript, HTML,
+              and CSS), React (a JavaScript library for building user interfaces), Reactstrap (a module that makes it easy
+              to use React Bootstrap 4 components), Webpack (a module whose main purpose is to bundle JavaScript files) and
+              React-chartjs (a module that provides rich interactive react charting components using chart.js).
+            </p>
+          </div>
+          <div style="margin-top: 2%" class="col-sm-4 wow fadeIn" data-wow-delay="0.4s">
+            <div class="text-center iphone wow fadeInUp" data-wow-delay="1s">
+              <img href="https://www.inpaclive.com/" src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/inpacLive.png">
+            </div>
+            <hr class="line purple">
+            <a href="https://www.inpaclive.com/" target="_blank">
+              <h3>Inpaclive.com</h3>
+            </a>
+            <p>A website built for a talented independent hip-hop artist. The beautiful platform connects the artist's fans to
+              all of his media and presence around the web. Powered with tools for direct sales, building a contact list and
+              collecting valuable analytics that will aid in improving fan engagement.</p>
+          </div>
+        </div>
     </div>
   </section>
 
