--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
             <a href="https://www.nuwholefoods.com/" target="_blank">
               <h3>NuWholeFoods</h3>
             </a>
-            <p>A website I created for a local entrepreneur.  It is a e-commerce site that sells an innovative whole-food supplement that delivers a generous 10 servings of vegetables in the flavor of your favorite desserts.  The companies mission is to reduce the prevalence of diabetes and high cholesterol worldwide.
+            <p>A website I created for a local entrepreneur.  It is a e-commerce site that sells an innovative whole-food supplement that delivers a generous 10 servings of vegetables in the flavor of your favorite desserts.  The company's mission is to reduce the prevalence of diabetes and high cholesterol worldwide.
             </p>
           </div>
           <div style="margin-top: 2%" class="col-sm-4 wow fadeIn" data-wow-delay="0.4s">
