--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
       <div class="row">
           <div style="margin-top: 2%" class="col-sm-4 wow fadeIn" data-wow-delay="0.8s">
             <div class="text-center iphone wow fadeInUp" data-wow-delay="1.4s">
-              <img href="https://replicode.herokuapp.com/" src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/spiceshop.png">
+              <img href="https://frozen-coast-37588.herokuapp.com/" src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/spiceshop.png">
             </div>
             <hr class="line purple">
             <a href="https://frozen-coast-37588.herokuapp.com/" target="_blank">
@@ -260,7 +260,7 @@
           </div>
           <div style="margin-top: 2%" class="col-sm-4 wow fadeIn" data-wow-delay="1.2s">
             <div class="text-center iphone wow fadeInUp" data-wow-delay="1.8s">
-              <img href="https://www.youtube.com/watch?v=R8uP2wKp4n0" src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/nuwholefoods.png">
+              <img href="https://www.nuwholefoods.com/" src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/nuwholefoods.png">
             </div>
             <hr class="line purple">
             <a href="https://www.nuwholefoods.com/" target="_blank">
@@ -271,7 +271,7 @@
           </div>
           <div style="margin-top: 2%" class="col-sm-4 wow fadeIn" data-wow-delay="0.4s">
             <div class="text-center iphone wow fadeInUp" data-wow-delay="1s">
-              <img href="https://www.inpaclive.com/" src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/ipacademy.png">
+              <img href="" src="https://raw.githubusercontent.com/chrisauinmotion/Christopher_Perez_WebPortfolio/master/img/ipacademy.png">
             </div>
             <hr class="line purple">
             <a href="" target="_blank">
