--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
             <a href="https://frozen-coast-37588.herokuapp.com/" target="_blank">
               <h3>Spice Shop</h3>
             </a>
-            <p>During the senior phase of a 17-week intensive software engineering bootcamp program, I built an e-commerce platform with a team of developers that allowed a hypothetical client to create, manage and run an e-commerce site.  The site was built utilizing the NERDS stack (Node.js, Express, React with Redux, PostgreSQL & Sequelize)</p>
+            <p>During the senior phase of a 17-week intensive software engineering bootcamp program, I built an e-commerce platform with a team of developers that allowed a hypothetical client to create, manage and run an e-commerce site.  The site was built utilizing the NERDS stack (Node.js, Express, React with Redux, PostgreSQL & Sequelize) and deployed on Heroku.</p>
           </div>
           <div style="margin-top: 2%" class="col-sm-4 wow fadeIn" data-wow-delay="1.2s">
             <div class="text-center iphone wow fadeInUp" data-wow-delay="1.8s">
