--- a/index.html
+++ b/index.html
@@ -174,10 +174,10 @@
             </li>
             <li class="features first">Mocha</li>
             <li class="features">Chai</li>
-            <li class="features">Jasmine</li>
-            <li class="features">Bootstrap</li>
-            <li class="features">Webpack</li>
-            <li class="features">Wafle.io</li>
+            <li class="features">Chart.js</li>
+            <li class="features">Amazon Web Services (AWS)</li>
+            <li class="features">SQL</li>
+            <li class="features">Heroku</li>
             <li class="features last btn btn-secondary btn-wide">
               <a 
               target="_blank"
